handle_logic_order_page_and_badget_notification

--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,8 @@
   flex           : 1;
   justify-content: space-around;
 }
+
+.ant-tabs-nav {
+  background-color: white;
+  border-radius   : 8px;
+}
