create_modal_to_view_detail_order

--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,7 @@
 .ant-tabs-tab.ant-tabs-tab-active span {
   color: #d22826;
 }
+
+.ant-menu-item.ant-menu-item-selected span {
+  color: #d22826;
+}
